ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/CnP_PaaS__XML_Setting__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Settings Overview</label>
    <nameField>
        <label>XML Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Settings Overview</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>