ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Account_Matching_Gift__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Account_Matching_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Matching Gift</label>
    <type>Checkbox</type>
</CustomField>