ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Account_Number__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Account_Number__c</fullName>
    <label>C&amp;P Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>