ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Accounts__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Accounts__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Account (1 to 1)</label>
    <type>Checkbox</type>
</CustomField>