ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Add_Questions__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Add_Questions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add Questions at VT</label>
    <type>Checkbox</type>
</CustomField>