ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Campaign_lp__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Campaign_lp__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>C&amp;P Settings Overview</relationshipLabel>
    <relationshipName>XML_Settings</relationshipName>
    <type>Lookup</type>
</CustomField>