ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__CnP_Account_Number_Matching__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Account_Number_Matching__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C&amp;P Account Number Matching</label>
    <type>Checkbox</type>
</CustomField>