ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Contact_Option__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Contact_Option__c</fullName>
    <label>Contact Settings Option</label>
    <length>200</length>
    <type>Text</type>
</CustomField>