ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Contact_Rolename__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Contact_Rolename__c</fullName>
    <label>Contact Role Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>