ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Convenience_Amount__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Convenience_Amount__c</fullName>
    <label>Convenience Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>