ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Custom_parameters__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Custom_parameters__c</fullName>
    <label>Custom parameters</label>
    <length>250</length>
    <type>Text</type>
</CustomField>