ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Custom_Payment_Type_Names__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Custom_Payment_Type_Names__c</fullName>
    <label>Custom Payment Type Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>