ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Custom_Payment_with_Stage_Info__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Custom_Payment_with_Stage_Info__c</fullName>
    <label>Custom Payment with Stage Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>