ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Customize_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Customize_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customize Name</label>
    <type>Checkbox</type>
</CustomField>