ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Deductible_Charge__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Deductible_Charge__c</fullName>
    <label>% Unit Tax Deductible</label>
    <length>15</length>
    <type>Text</type>
</CustomField>