ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Donors_Perso_Donations_Count_Rank_Factor__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Donors_Perso_Donations_Count_Rank_Factor__c</fullName>
    <label>Donors Perso Donations Count Rank Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>