ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Donors_Raised_Donations_Count_factor__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Donors_Raised_Donations_Count_factor__c</fullName>
    <label>Donors Raised Donations Count factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>