ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__insert_contacts__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__insert_contacts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>insert contacts</label>
    <type>Checkbox</type>
</CustomField>