ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Internal_Notifications__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Internal_Notifications__c</fullName>
    <label>Internal Notifications</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>