ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Lead_source__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Lead_source__c</fullName>
    <label>Lead Source</label>
    <length>20</length>
    <type>Text</type>
</CustomField>