ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Manual_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Manual_Opportunities__c</fullName>
    <label>Manual Opportunities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>