ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__No_Account__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__No_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Account</label>
    <type>Checkbox</type>
</CustomField>