ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Number_Of_Installments__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Number_Of_Installments__c</fullName>
    <label># Of Installments</label>
    <length>5</length>
    <type>Text</type>
</CustomField>