ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Oppor_Stage_Name__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Oppor_Stage_Name__c</fullName>
    <label>Stage Authorized</label>
    <length>100</length>
    <type>Text</type>
</CustomField>