ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Opportunities__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Opportunities__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunities</label>
    <type>Checkbox</type>
</CustomField>