ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Opportunity_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Opportunity_Amount_Type__c</fullName>
    <label>Opportunity Amount Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>