ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Payment_Custom_Payment_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Payment_Custom_Payment_Type__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Payment Custom Payment Type</label>
    <type>Checkbox</type>
</CustomField>