ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Payment_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Payment_Purchase_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Purchase Order</label>
    <type>Checkbox</type>
</CustomField>