ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Personal_Donations_Count_Factor__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Personal_Donations_Count_Factor__c</fullName>
    <label>Personal Donations Count Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>