ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Purchase_Order_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Purchase_Order_Opportunity__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Opportunity Purchase Order</label>
    <type>Checkbox</type>
</CustomField>