ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Recurring__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Recurring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Recurring</label>
    <type>Checkbox</type>
</CustomField>