ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Stage_Account_Matching_Gift__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Stage_Account_Matching_Gift__c</fullName>
    <label>Stage Account Matching Gift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>