ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Stage_Credit__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Stage_Credit__c</fullName>
    <label>Stage Credit/Cancel</label>
    <length>100</length>
    <type>Text</type>
</CustomField>