ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Stage_Custom_Payment__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Stage_Custom_Payment__c</fullName>
    <label>Stage Custom Payment</label>
    <length>200</length>
    <type>Text</type>
</CustomField>