ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Stage_Future__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Stage_Future__c</fullName>
    <label>Stage Future</label>
    <length>200</length>
    <type>Text</type>
</CustomField>