ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__State_Format__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__State_Format__c</fullName>
    <label>State Format</label>
    <length>10</length>
    <type>Text</type>
</CustomField>