ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Thank_you__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Thank_you__c</fullName>
    <label>Thank you</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>