ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__VT_Customize_XML__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__VT_Customize_XML__c</fullName>
    <label>VT Customize XML</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>