ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__XML_Setting__c/fields/CnP_PaaS__Zero_Amount_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Zero_Amount_Opportunity_Type__c</fullName>
    <label>Zero Amount Opportunity Type</label>
    <length>25</length>
    <type>Text</type>
</CustomField>